Refactoring. Made separate .js files for the mutual scripts and fixed some bugs when deselecting a browsed file. The application's db context now uses an ApplicationUser instead of the default IdentityUser. Added 2 new columns for ApplicationUser - ProfilePicture and Description.

--- a/Marketplace/Views/Advertisement/Edit.cshtml
+++ b/Marketplace/Views/Advertisement/Edit.cshtml
@@ -90,72 +90,6 @@
 
 @section Scripts
 {
-    <script>
-        window.onload=function()
-        {
-            let plusSignUrl = window.location.protocol + "//" + window.location.host+"/plusSign.png";
-            
-            for(let i=1;i<=4;i++){
-                let currentImageSrc = document.querySelector('#image'+i).src;
-                
-                if(currentImageSrc===plusSignUrl){
-                    continue;
-                }
-
-                let currentInput = document.querySelector('#imageInput'+i);
-                ConvertBase64ToFile(currentImageSrc,currentInput);
-            }
-        }
-
-    </script>
-    <script>
-        function ConvertBase64ToFile(base64url,input) {
-            var file = dataURLtoFile(base64url, "name.png");
-            let container = new DataTransfer();
-            container.items.add(file);
-            input.files = container.files;
-        }
-        function dataURLtoFile(dataurl, filename) {
-            var arr = dataurl.split(','),
-            mime = arr[0].match(/:(.*?);/)[1],
-            bstr = atob(arr[1]),
-            n = bstr.length,
-            u8arr = new Uint8Array(n);
-
-            while (n--) {
-            u8arr[n] = bstr.charCodeAt(n);
-            }
-
-            return new File([u8arr], filename, { type: mime });
-        }
-    </script>
-    <script>
-        function readURL(input,imageId, editedIndex) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-
-                reader.onload= function (e) {
-                
-                $('#'+imageId).attr('src', e.target.result);
-                
-                };
-
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-    </script>
-    <script>
-    function lowerImageOpacity(x) {
-        x.style.opacity = "0.6";
-    }
-
-    function increaseImageOpacity(x) {
-        x.style.opacity = "1";
-    }
-
-    function triggerInputBrowse(inputId)
-    {
-        $('#'+inputId).trigger('click');
-    }
-    </script>
+    <script defer src=~/js/loadPreviousImages.js></script>
+    <script src="~/js/imageManipulation.js"></script>
 }
