--- a/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
+++ b/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Microsoft.AspNetCore.Identity.SignInManager<Microsoft.AspNetCore.Identity.IdentityUser> _signInManager
+﻿@inject Microsoft.AspNetCore.Identity.SignInManager<Marketplace.Models.ApplicationUser> _signInManager
 
 <ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
