--- a/Marketplace/Views/Advertisement/Create.cshtml
+++ b/Marketplace/Views/Advertisement/Create.cshtml
@@ -55,34 +55,5 @@
 
 @section Scripts
 {
-    <script>
-        function readURL(input,imageId) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-
-                reader.onload= function (e) {
-                
-                $('#'+imageId).attr('src', e.target.result);
-                
-                };
-
-                reader.readAsDataURL(input.files[0]);
-
-            }
-        }
-    </script>
-    <script>
-    function lowerImageOpacity(x) {
-        x.style.opacity = "0.6";
-    }
-
-    function increaseImageOpacity(x) {
-        x.style.opacity = "1";
-    }
-
-    function triggerInputBrowse(inputId)
-    {
-        $('#'+inputId).trigger('click');
-    }
-    </script>
+    <script src="~/js/imageManipulation.js"></script>
 }
