Added cancel buttons.

--- a/Marketplace/Views/Advertisement/Create.cshtml
+++ b/Marketplace/Views/Advertisement/Create.cshtml
@@ -70,7 +70,8 @@
         </select>
         <span asp-validation-for=CategoryId class=text-danger></span>
     </div>
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary border border-dark rounded">Create</button>
+    <a class="btn btn btn-light border border-dark rounded" asp-action="MyProfile" asp-controller="Account">Cancel</a>
 </form>
 
 @section Scripts
