--- a/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
+++ b/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Marketplace.ViewModels.MyProfileAdvertisementViewModel;
+﻿@model Marketplace.ViewModels.SimplifiedAdvertisementViewModel;
 
 <img src="data:image;base64,@Model.ImageInBase64" class="card-img-top">
 
@@ -9,5 +9,6 @@
     <h6 class="font-s">@Model.Price EUR</h6>
     <button class="btn btn-sm btn-dark">SHOW</button>
     <a class="btn btn-sm btn-warning" asp-action="Edit" asp-controller="Advertisement" asp-route-id="@Model.Id">EDIT</a>
-    <button class="btn btn-sm btn-danger">DELETE</button>
+
+    <a class="btn btn-sm btn-danger" onclick="showDeleteAdModal('@Model.Title',@Model.Id)">DELETE</a>
 </div>
