--- a/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
+++ b/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
@@ -7,7 +7,7 @@
 </div>
 <div class="card-footer text-center ">
     <h6 class="font-s">@Model.Price EUR</h6>
-    <button class="btn btn-sm btn-dark">SHOW</button>
+    <a class="btn btn-sm btn-dark" asp-action="Show" asp-controller="Advertisement" asp-route-id="@Model.Id">SHOW</a>
     <a class="btn btn-sm btn-warning" asp-action="Edit" asp-controller="Advertisement" asp-route-id="@Model.Id">EDIT</a>
 
     <a class="btn btn-sm btn-danger" onclick="showDeleteAdModal('@Model.Title',@Model.Id)">DELETE</a>
