--- a/Marketplace/Views/Advertisement/Show.cshtml
+++ b/Marketplace/Views/Advertisement/Show.cshtml
@@ -28,7 +28,7 @@
         }
     }
 
-    if(ViewBag.ProfilePicture != null)
+    if(@Model.ProfilePicture != null)
     {
         profilePictureSrc = "data:image;base64,"+Convert.ToBase64String(@Model.ProfilePicture);
     }
