--- a/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
+++ b/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
@@ -10,6 +10,9 @@
     @if (_signInManager.IsSignedIn(User))
     {
         <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="MyAdvertisements">My Advertisements</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="MyProfile">My Profile</a>
         </li>
     }
