--- a/Marketplace/Views/Advertisement/Create.cshtml
+++ b/Marketplace/Views/Advertisement/Create.cshtml
@@ -71,7 +71,7 @@
         <span asp-validation-for=CategoryId class=text-danger></span>
     </div>
     <button type="submit" class="btn btn-primary border border-dark rounded">Create</button>
-    <a class="btn btn btn-light border border-dark rounded" asp-action="MyProfile" asp-controller="Account">Cancel</a>
+    <a class="btn btn btn-light border border-dark rounded" asp-action="MyAdvertisements" asp-controller="Account">Cancel</a>
 </form>
 
 @section Scripts
