--- a/Marketplace/Views/Advertisement/Edit.cshtml
+++ b/Marketplace/Views/Advertisement/Edit.cshtml
@@ -98,7 +98,7 @@
         <span asp-validation-for=CategoryId class=text-danger></span>
     </div>
     <button type="submit" class="btn btn-primary border border-dark rounded">Update</button>
-    <a class="btn btn btn-light border border-dark rounded" asp-action="MyProfile" asp-controller="Account">Cancel</a>
+    <a class="btn btn btn-light border border-dark rounded" asp-action="MyAdvertisements" asp-controller="Account">Cancel</a>
    
     <input asp-for="ImageInBytes" type="hidden"/>
     @if (@Model.AdditionalImagesInBytes!=null)
