--- a/Marketplace/Views/Advertisement/Show.cshtml
+++ b/Marketplace/Views/Advertisement/Show.cshtml
@@ -33,8 +33,6 @@
     }
 }
 
-@*TODO Make it look good haha*@
-
 <h3 class="text-center mb-3">View An Advertisement</h3>
 <div class="row justify-content-md-center">
     <div class="card col-sm-3 border border-primary rounded p-0 mb-3 mx-1">
@@ -46,21 +44,48 @@
 
 <div class="container">
 <div class="row justify-content-md-center">
-    <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
-        <div class="card-body">
-            <img id="image2" src="@firstSrc" class="card-img" onclick="zoomImage(this)">
-        </div>
-    </div>
-    <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
-        <div class="card-body">
-            <img id="image3" src="@secondSrc" class="card-img" onclick="zoomImage(this)">
-        </div>
-    </div>
-    <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
-        <div class="card-body">
-            <img id="image4" src="@thirdSrc" class="card-img" onclick="zoomImage(this)">
-        </div>
-    </div>
+    @if (Model.AdditionalImagesInBytes != null)
+    {
+        if (Model.AdditionalImagesInBytes.Count() == 1)
+        {
+            <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
+                <div class="card-body">
+                    <img id="image2" src="@firstSrc" class="card-img" onclick="zoomImage(this)">
+                </div>
+            </div>
+        }
+        if(Model.AdditionalImagesInBytes.Count() == 2)
+        {
+            <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
+                <div class="card-body">
+                    <img id="image2" src="@firstSrc" class="card-img" onclick="zoomImage(this)">
+                </div>
+            </div>
+            <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
+                <div class="card-body">
+                    <img id="image3" src="@secondSrc" class="card-img" onclick="zoomImage(this)">
+                </div>
+            </div>
+        }
+        if(Model.AdditionalImagesInBytes.Count() == 3)
+        {
+            <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
+                <div class="card-body">
+                    <img id="image2" src="@firstSrc" class="card-img" onclick="zoomImage(this)">
+                </div>
+            </div>
+            <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
+                <div class="card-body">
+                    <img id="image3" src="@secondSrc" class="card-img" onclick="zoomImage(this)">
+                </div>
+            </div>
+            <div class="card col-sm-2 border border-primary rounded p-0 mb-3 mx-1">
+                <div class="card-body">
+                    <img id="image4" src="@thirdSrc" class="card-img" onclick="zoomImage(this)">
+                </div>
+            </div>
+        }
+    }
 </div>
 </div>
     <div class="container">
@@ -93,15 +118,13 @@
         </div>
         <div class="col-4">
             <div class="container">
-                <h4 class="text-center">User</h4>
-                <div onclick="goToProfile()" onmouseover="doEffects()" onmouseout="removeEffects()" class="card border border-primary">
+                <h4 class="text-center">Seller</h4>
+                @*TODO make the effects work + display phone number on profile pages if it isnt null*@
+                <div class="card border border-primary">
                     <div class="card-body">
                         <img id="image1" src="@profilePictureSrc" class="card-img">
                     </div>
-                    <div class="text-center">
-                        <input readonly class="form-control text-center" asp-for="UserName"/>
-                    </div>
-                    <a id="visitProfile" asp-action="@Model.UserName" asp-controller="Users"></a>
+                    <a class="text-center pb-3" id="visitProfile" asp-action="@Model.UserName" asp-controller="Users">@Model.UserName</a>
                 </div>
             </div>
             <div class="container">
@@ -144,23 +167,6 @@
         function closeZoomImageModal()
         {
             $('#zoomImageModal').modal('hide');
-        }
-    </script>
-    <script>
-        function goToProfile(userId)
-        {
-            var link = document.querySelector("#visitProfile").href;
-            window.open(link, '_blank');
-        }
-        function doEffects()
-        {
-            let x = document.querySelector("#image1");
-            console.log("mouseIn");
-        }
-        function removeEffects()
-        {
-            let x = document.querySelector("#image1");
-            console.log("mouseOut");
         }
     </script>
 }
